crates/pcb-zen/tests/snapshots/load_diagnostics__snapshot_duplicate_component_name.snap
---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "SMD:0402")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "R1") (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd"))
      (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd")
      (property (name "Reference") (value "U1"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "GND")
      (node (ref "U1") (pin "2") (pintype "stereo"))
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "2") (name "VCC")
      (node (ref "U1") (pin "1") (pintype "stereo"))
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
Warning: [TEMP_DIR]test.zen:14:1-19:2 Duplicate component name 'R1': a component with this name already exists in this module. This will become an error in a future release.
