crates/pcb-zen/tests/snapshots/load_diagnostics__snapshot_duplicate_module_name.snap
---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "SMD:0402")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "sub1.R1") (tstamps "dd7b5598-df0d-5e4c-9c7b-0fbfbc07a19e"))
      (tstamps "dd7b5598-df0d-5e4c-9c7b-0fbfbc07a19e")
      (property (name "Reference") (value "U1"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "sub1.GND")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "2") (name "sub1.VCC")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
Warning: [TEMP_DIR]test.zen:8:1-19 Duplicate child name 'sub1': a module with this name already exists. This will become an error in a future release.
