crates/pcb-zen/tests/snapshots/load_diagnostics__snapshot_load_directory_with_errors.snap
---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: netlist
---
Error: [TEMP_DIR]test.zen:3:6-17 Error loading module `./modules/BadModule.zen`
Error: [TEMP_DIR]modules/BadModule.zen:3:1-42 Failed to resolve module path './does_not_exist.zen'
